tests/ui/raw-ref-op/raw-ref-temp.stderr
error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:10:31
   |
LL |     let ref_expr = &raw const 2;
   |                               ^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:11:33
   |
LL |     let mut_ref_expr = &raw mut 3;
   |                                 ^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:12:32
   |
LL |     let ref_const = &raw const FOUR;
   |                                ^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:13:34
   |
LL |     let mut_ref_const = &raw mut FOUR;
   |                                  ^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:15:37
   |
LL |     let field_ref_expr = &raw const (1, 2).0;
   |                                     ^^^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:16:39
   |
LL |     let mut_field_ref_expr = &raw mut (1, 2).0;
   |                                       ^^^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:17:32
   |
LL |     let field_ref = &raw const PAIR.0;
   |                                ^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:18:34
   |
LL |     let mut_field_ref = &raw mut PAIR.0;
   |                                  ^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:20:37
   |
LL |     let index_ref_expr = &raw const [1, 2][0];
   |                                     ^^^^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:21:39
   |
LL |     let mut_index_ref_expr = &raw mut [1, 2][0];
   |                                       ^^^^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:22:32
   |
LL |     let index_ref = &raw const ARRAY[0];
   |                                ^^^^^^^^ temporary value

error[E0745]: cannot take address of a temporary
  --> $DIR/raw-ref-temp.rs:23:34
   |
LL |     let mut_index_ref = &raw mut ARRAY[1];
   |                                  ^^^^^^^^ temporary value

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0745`.
